--- a/templates/index.html
+++ b/templates/index.html
@@ -15,19 +15,19 @@
 <meta name="author" content="">
 
 <!-- Site Icons -->
-<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
-<link rel="apple-touch-icon" href="images/favicon.png">
+<link rel="shortcut icon" href="static/images/favicon.png" type="image/x-icon" />
+<link rel="apple-touch-icon" href="static/images/favicon.png">
 
 <!-- Bootstrap CSS -->
-<link rel="stylesheet" href="css/bootstrap.min.css">
+<link rel="stylesheet" href="static/css/bootstrap.min.css">
 <!-- Site CSS -->
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="static/style.css">
 <!-- Responsive CSS -->
-<link rel="stylesheet" href="css/responsive.css">
+<link rel="stylesheet" href="static/css/responsive.css">
 <!-- Custom CSS -->
-<link rel="stylesheet" href="css/custom.css">
+<link rel="stylesheet" href="static/css/custom.css">
 
-<script src="js/modernizr.js"></script> <!-- Modernizr -->
+<script src="static/js/modernizr.js"></script> <!-- Modernizr -->
 
 <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -77,7 +77,7 @@
         </div>
     </nav>
 
-    <section id="home" class="main-banner parallaxie" style="background: url('images/banner-01.gif')">
+    <section id="home" class="main-banner parallaxie" style="background: url('static/images/banner-01.gif')">
         <div class="heading">
             <h1 style="color: rgb(0, 255, 0)">Wawan's Server Is Online</h1>
             <p>"Selamat datang di situs Muhammad Ikhwan Perwira. <br>Tidak ada hal yang menarik disini kecuali hal
@@ -140,7 +140,7 @@
 
                 <div class="col-md-6">
                     <div class="right-box-pro wow fadeIn">
-                        <img src="images/about_04.jpg" alt="" class="img-fluid img-rounded">
+                        <img src="static/images/about_04.jpg" alt="" class="img-fluid img-rounded">
                     </div><!-- end media -->
                 </div><!-- end col -->
             </div><!-- end row -->
@@ -180,7 +180,7 @@
                 <div class="col-md-4">
                     <div class="skills-inner-box">
                         <div>
-                            <img src='images/iot.png'>
+                            <img src='static/images/iot.png'>
                         </div>
                         <h2>Internet of Things</h2>
                         <p>Pernah sekali membuat sensor cahaya dengan data loggernya diupload ke website sini, namun
@@ -211,7 +211,7 @@
                 <div class="col-md-4">
                     <div class="skills-inner-box">
                         <div>
-                            <img src='images/piano.png'>
+                            <img src='static/images/piano.png'>
                         </div>
                         <h2>Pianist</h2>
                         <p>Di sisi lain, saya juga hobi dengan salah satu seni yaitu musik. Lebih tepatya piano, mau
@@ -289,18 +289,18 @@
     <a href="#" id="scroll-to-top" class="dmtop global-radius"><i class="fa fa-angle-up"></i></a>
 
     <!-- ALL JS FILES -->
-    <script src="js/all.js"></script>
+    <script src="static/js/all.js"></script>
     <!-- Camera Slider -->
-    <script src="js/jquery.mobile.customized.min.js"></script>
-    <script src="js/jquery.easing.1.3.js"></script>
-    <script src="js/parallaxie.js"></script>
-    <script src="js/headline.js"></script>
+    <script src="static/js/jquery.mobile.customized.min.js"></script>
+    <script src="static/js/jquery.easing.1.3.js"></script>
+    <script src="static/js/parallaxie.js"></script>
+    <script src="static/js/headline.js"></script>
     <!-- Contact form JavaScript -->
-    <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me.js"></script>
+    <script src="static/js/jqBootstrapValidation.js"></script>
+    <script src="static/js/contact_me.js"></script>
     <!-- ALL PLUGINS -->
-    <script src="js/custom.js"></script>
-    <script src="js/jquery.vide.js"></script>
+    <script src="static/js/custom.js"></script>
+    <script src="static/js/jquery.vide.js"></script>
 
 </body>
 
