--- a/templates/index.html
+++ b/templates/index.html
@@ -15,8 +15,8 @@
 <meta name="author" content="">
 
 <!-- Site Icons -->
-<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
-<link rel="apple-touch-icon" href="images/favicon.png">
+<link rel="shortcut icon" href="static/images/favicon.png" type="image/x-icon" />
+<link rel="apple-touch-icon" href="static/images/favicon.png">
 
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="static/css/bootstrap.min.css">
@@ -140,7 +140,7 @@
 
                 <div class="col-md-6">
                     <div class="right-box-pro wow fadeIn">
-                        <img src="images/about_04.jpg" alt="" class="img-fluid img-rounded">
+                        <img src="static/images/about_04.jpg" alt="" class="img-fluid img-rounded">
                     </div><!-- end media -->
                 </div><!-- end col -->
             </div><!-- end row -->
