--- a/templates/index.html
+++ b/templates/index.html
@@ -15,8 +15,10 @@
 <meta name="author" content="">
 
 <!-- Site Icons -->
-<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
-<link rel="apple-touch-icon" href="images/favicon.png">
+<link rel="shortcut icon" href="https://storage.googleapis.com/menjadi-gcloud-engineer.appspot.com/images/favicon.png"
+    type="image/x-icon" />
+<link rel="apple-touch-icon"
+    href="https://storage.googleapis.com/menjadi-gcloud-engineer.appspot.com/images/favicon.png">
 
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="static/css/bootstrap.min.css">
@@ -77,7 +79,8 @@
         </div>
     </nav>
 
-    <section id="home" class="main-banner parallaxie" style="background: url('static/images/banner-01.gif')">
+    <section id="home" class="main-banner parallaxie"
+        style="background: url('https://storage.googleapis.com/menjadi-gcloud-engineer.appspot.com/images/banner-01.gif')">
         <div class="heading">
             <h1 style="color: rgb(0, 255, 0)">Wawan's Server Is Online</h1>
             <p>"Selamat datang di situs Muhammad Ikhwan Perwira. <br>Tidak ada hal yang menarik disini kecuali hal
@@ -140,7 +143,8 @@
 
                 <div class="col-md-6">
                     <div class="right-box-pro wow fadeIn">
-                        <img src="images/about_04.jpg" alt="" class="img-fluid img-rounded">
+                        <img src="https://storage.googleapis.com/menjadi-gcloud-engineer.appspot.com/images/about_04.jpg"
+                            alt="" class="img-fluid img-rounded">
                     </div><!-- end media -->
                 </div><!-- end col -->
             </div><!-- end row -->
@@ -180,7 +184,8 @@
                 <div class="col-md-4">
                     <div class="skills-inner-box">
                         <div>
-                            <img src='static/images/iot.png'>
+                            <img
+                                src='https://storage.googleapis.com/menjadi-gcloud-engineer.appspot.com/images/iot.png'>
                         </div>
                         <h2>Internet of Things</h2>
                         <p>Pernah sekali membuat sensor cahaya dengan data loggernya diupload ke website sini, namun
@@ -211,7 +216,8 @@
                 <div class="col-md-4">
                     <div class="skills-inner-box">
                         <div>
-                            <img src='static/images/piano.png'>
+                            <img
+                                src='https://storage.googleapis.com/menjadi-gcloud-engineer.appspot.com/images/piano.png'>
                         </div>
                         <h2>Pianist</h2>
                         <p>Di sisi lain, saya juga hobi dengan salah satu seni yaitu musik. Lebih tepatya piano, mau
